# mp-flow

./: "ali1688":[^,}]*[^}]*}  .env.example  .gitignore  .mcp.json  ANALYSIS_INDEX.md  ANALYSIS_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_ANALYSIS.md  QUICK_OVERVIEW.md  README.md  SECURITY.md  TECHNICAL_ARCHITECTURE.md  VIDEO_DEMO_SCRIPT.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.product-strategy/: context.md  decisions.md  market.md  opportunities.md
admin/: .release-it.json  Dockerfile  mpflow.config.ts  package-lock.json  package.json  tailwind.config.js  test-sales.ts  tsconfig.json  tsconfig.plugins.json  tsconfig.server.json  vite.config.ts
admin-ui/: Dockerfile  app.js  env.d.ts  index.html  nginx.conf  package-lock.json  package.json  styles.css  tsconfig.json  vite.config.ts
ee/: LICENSE
proxy/: Dockerfile  logging_config.json  pyproject.toml  requirements.txt
proxy/src/: config.py  main.py
proxy/src/ee/: __init__.py  license.py
proxy/src/mcp/: __init__.py  auth.py  deps.py  errors.py  oauth.py
proxy/src/mcp/tools/: __init__.py  catalog.py  demand.py  finance.py  integrations.py  inventory.py  logistics.py  media.py  meta.py  orders.py  ozon.py  reports.py  sales.py  settings.py
proxy/src/plugins/: __init__.py  context.py
proxy/src/plugins/ali1688/: manifest.json  routes.py  schema.sql  service.py
proxy/src/repositories/admin/: api_key_repo.py  base.py  card_repo.py  finance_repo.py  lot_repo.py  order_repo.py  sale_repo.py  stock_repo.py  user_repo.py
proxy/src/routes/: admin_helpers.py  admin_models.py  admin_ozon.py  admin_sales.py  api_docs.py  health.py
proxy/src/routes/admin/: __init__.py  api_keys.py  auth.py  cards.py  demand.py  deps.py  errors.py  finance.py  integrations.py  inventory.py  list_query.py  logistics.py  orders.py  ozon_sync.py  pagination.py  pricing.py  promotions.py  reports.py  response_models.py  sales.py  serialization.py  settings.py  users.py
proxy/src/services/: admin_logic.py  admin_security.py  auth.py  exchange_rate.py  pricing.py
proxy/src/services/admin/: api_key_service.py  auth_service.py  card_service.py  demand_service.py  enrichments.py  fifo_service.py  finance_service.py  inventory_service.py  loss_service.py  order_service.py  ozon_parsers.py  pricing_service.py  report_service.py  sales_service.py  tmapi_client.py  utils.py
(+483 files in other folders)
